[package]
name = "caldera"
version = "0.1.0"
authors = ["Tahir Chaudhry <raforawesome@raforaweso.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack"] }

dioxus-logger = "0.5.1"
regex = "1.11.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
